🚀 Renomear para Rumo Finance + Sidebar Web + ExcelImporter + Tutorial

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Agrofinance Gestão Rural",
-    "slug": "agrofinance-gestao-rural",
+    "name": "Rumo Finance",
+    "slug": "rumo-finance",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
