--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "bunx rork start -p kngoia6qkzh97ic2nwb8l --tunnel",
     "start-web": "bunx rork start -p kngoia6qkzh97ic2nwb8l --web --tunnel",
     "start-web-dev": "DEBUG=expo* bunx rork start -p kngoia6qkzh97ic2nwb8l --web --tunnel",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -51,9 +54,16 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.16",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
   },
   "private": true
